I think I got the beginning of the AST implemented, the DATUM OUTPUT CONST AND INPUT nodes are beging created and printed

--- a/prototype/front-end/makefile
+++ b/prototype/front-end/makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-I.
-DEPS = symboltable.h
-OBJ = symboltable.o
+DEPS = symboltable.h ast.h
+OBJ = symboltable.o ast.o
 
 %.o: %.c $(DEPS)
 		$(CC) -c -o $@ $< $(CFLAGS)
